y.output
   0  $accept : line_list $end

   1  line_list : line
   2            | line_list line

   3  line : expression CR
   4       | error CR

   5  expression : term
   6             | expression ADD term
   7             | expression SUB term

   8  term : primary_expression
   9       | term MUL primary_expression
  10       | term DIV primary_expression

  11  primary_expression : DOUBLE_LITERAL

state 0
	$accept : . line_list $end  (0)

	error  shift 1
	DOUBLE_LITERAL  shift 2
	.  error

	line_list  goto 3
	expression  goto 4
	term  goto 5
	primary_expression  goto 6
	line  goto 7


state 1
	line : error . CR  (4)

	CR  shift 8
	.  error


state 2
	primary_expression : DOUBLE_LITERAL .  (11)

	.  reduce 11


state 3
	$accept : line_list . $end  (0)
	line_list : line_list . line  (2)

	$end  accept
	error  shift 1
	DOUBLE_LITERAL  shift 2
	.  error

	expression  goto 4
	term  goto 5
	primary_expression  goto 6
	line  goto 9


state 4
	line : expression . CR  (3)
	expression : expression . ADD term  (6)
	expression : expression . SUB term  (7)

	ADD  shift 10
	SUB  shift 11
	CR  shift 12
	.  error


state 5
	expression : term .  (5)
	term : term . MUL primary_expression  (9)
	term : term . DIV primary_expression  (10)

	MUL  shift 13
	DIV  shift 14
	ADD  reduce 5
	SUB  reduce 5
	CR  reduce 5


state 6
	term : primary_expression .  (8)

	.  reduce 8


state 7
	line_list : line .  (1)

	.  reduce 1


state 8
	line : error CR .  (4)

	.  reduce 4


state 9
	line_list : line_list line .  (2)

	.  reduce 2


state 10
	expression : expression ADD . term  (6)

	DOUBLE_LITERAL  shift 2
	.  error

	term  goto 15
	primary_expression  goto 6


state 11
	expression : expression SUB . term  (7)

	DOUBLE_LITERAL  shift 2
	.  error

	term  goto 16
	primary_expression  goto 6


state 12
	line : expression CR .  (3)

	.  reduce 3


state 13
	term : term MUL . primary_expression  (9)

	DOUBLE_LITERAL  shift 2
	.  error

	primary_expression  goto 17


state 14
	term : term DIV . primary_expression  (10)

	DOUBLE_LITERAL  shift 2
	.  error

	primary_expression  goto 18


state 15
	expression : expression ADD term .  (6)
	term : term . MUL primary_expression  (9)
	term : term . DIV primary_expression  (10)

	MUL  shift 13
	DIV  shift 14
	ADD  reduce 6
	SUB  reduce 6
	CR  reduce 6


state 16
	expression : expression SUB term .  (7)
	term : term . MUL primary_expression  (9)
	term : term . DIV primary_expression  (10)

	MUL  shift 13
	DIV  shift 14
	ADD  reduce 7
	SUB  reduce 7
	CR  reduce 7


state 17
	term : term MUL primary_expression .  (9)

	.  reduce 9


state 18
	term : term DIV primary_expression .  (10)

	.  reduce 10


8 terminals, 6 nonterminals
12 grammar rules, 19 states
